Set position: relative on the <img hero> to ensure that the z-index is honored.

--- a/google-youtube-video-wall.css
+++ b/google-youtube-video-wall.css
@@ -47,6 +47,7 @@ paper-input /deep/ input {
 }
 
 .video-container > img {
+  position: relative;
   width: 100%;
   display: block;
   overflow: hidden;
